# family_tree

./: .gitignore  LICENSE  app.py  pyproject.toml
family_tree/: fake_family.py
notebooks/: d3_testing.ipynb  generate_synthetic_data.ipynb
synthetic_data/non_english_first_names/: hebrew_first_names.csv
synthetic_data/surnames/: jewish_surnames.csv
visualizations/main-viz/: data.json  family-chart.js  index.html
visualizations/src/: d3.js  edits.md
visualizations/src/CreateTree/: form.js
visualizations/src/styles/: family-chart.css
visualizations/src/view/elements/: Card.js  CardHtml.js  Form.js
visualizations/template/: index.js
visualizations/viz-1/: index.html
visualizations/viz-2/: index copy.html  index.html  unmin.js
visualizations/viz-3/: data.json
visualizations/viz-3 copy/: index.html  index.js
