[tool.poetry]
name = "family_tree"
version = "0.1.0"
description = ""
authors = ["MichoelSnow <protect3f@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
notebook = "^6.5.6"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-nbextensions-configurator = "0.6.3"
black = "^25.1.0"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
